Volunteer has been over hauled Volunteer is now much more effcient. I made a method to format the card so i wasnt doing the same thing over and over again in the code. Its much better now.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,11 +12,11 @@
             "mainClass": "${file}"
         }
         // {
-        //     "type": "java",
-        //     "name": "Launch with Arguments Prompt",
-        //     "request": "launch",
-        //     "mainClass": "mathMagical",
-        //     "args": "'Club 7' 'Diamond 3' 'Diamond 4' 'Spade 10' 'Heart J' 'Spade 3' 'Spade 5'"
+            // "type": "java",
+            // "name": "Launch with Arguments Prompt",
+            // "request": "launch",
+            // "mainClass": "mathMagical",
+            // "args": "'Club K' 'spade A' 'Club Q' 'Diamond 3' 'Diamond 4' 'Heart 9' 'Heart 4'"
         // }
         // {
         //     "type": "java",
